Fix navbar link name, update CSS for spacing on new name

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -300,14 +300,14 @@ nav {
         width: 130px;
 
         .drop-menu {
-            width: 530px;
+            width: 560px;
             left: -175px;
             
             .menu-split-left {
                 width: 320px;
             }
             .menu-split-right {
-                width: 180px;
+                width: 210px;
             }
         }
     }
@@ -365,7 +365,7 @@ nav {
         
         &.learn-scope {
             left: -267px;
-            width: 580px;
+            width: 620px;
             height: 485px;
         }
         &.tanzutv-scope {
